# thoth

./: .gitignore  README.md  main.py  pyproject.toml
data/: context.md  logo.txt  logos.txt
thoth/: display.py  logger.py  memory.py  signatures.py  tools.py  utils.py
thoth/d2l/: common.py  doc_to_lora.py
